--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "description": "vault core website",
   "main": "index.js",
   "scripts": {
-    "start": "source ./scripts/source-me.sh && ./scripts/go-compile.sh ./vault-web-server && echo && ./bin/vault-web-server",
+    "start": "./vault-web-server && echo && ./bin/vault-web-server",
     "dev": "webpack --progress --watch",
-    "postinstall": "source ./scripts/source-me.sh && ./scripts/go-compile.sh ./vault-web-server"
+    "build": "webpack --mode production"
   },
+  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pashpashpash/vault.git"
