cross platform script switching

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "description": "vault core website",
     "main": "index.js",
     "scripts": {
-        "prestart": "bash ./scripts/source-me-windows.sh",
-        "start": "bash ./scripts/go-compile-windows.sh ./vault-web-server && echo && %CD%/bin/vault-web-server.exe",
         "dev": "webpack --progress --watch",
-        "prepostinstall": "bash ./scripts/source-me-windows.sh",
-        "postinstall": "bash ./scripts/go-compile-windows.sh ./vault-web-server"
+        "start": "run-script-os",
+        "postinstall": "run-script-os",
+        "start:win32": "bash ./scripts/go-compile-windows.sh ./vault-web-server && echo && %CD%/bin/vault-web-server.exe",
+        "postinstall:win32": "bash ./scripts/go-compile-windows.sh ./vault-web-server",
+        "start:darwin:linux": "source ./scripts/source-me.sh && ./scripts/go-compile.sh ./vault-web-server && echo && ./bin/vault-web-server",
+        "postinstall:darwin:linux": "source ./scripts/source-me.sh && ./scripts/go-compile.sh ./vault-web-server"
     },
     "repository": {
         "type": "git",
@@ -35,7 +37,6 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
-        "cross-env": "^7.0.3",
         "@babel/core": "^7.16.0",
         "@babel/preset-env": "^7.16.0",
         "@babel/preset-flow": "^7.16.0",
@@ -47,6 +48,7 @@
         "less-loader": "^10.2.0",
         "npm": "^8.12.1",
         "react-dom": "^17.0.2",
+        "run-script-os": "^1.1.6",
         "stream-browserify": "^3.0.0",
         "style-loader": "^3.3.1",
         "webpack": "^5.64.0",
