--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/plugin-transform-runtime": "^7.21.4",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
+    "marked": "^5.0.3",
     "os-browserify": "0.3.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
